python/sxlParser.py
# Generated from sxl.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class sxlParser ( Parser ):

    grammarFileName = "sxl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import'", "'{'", "'}'", "'blocks'", 
                     "'registers'", "'signals'", "'enums'", "'desc'", "'addr'", 
                     "'size'", "'value'", "'notify'", "'rw'", "'ro'", "'wo'", 
                     "'unit'", "'-'", "'Perc.'", "'numrep'", "'uint8'", 
                     "'uint16'", "'uint32'", "'sint8'", "'sint16'", "'sint32'", 
                     "'ufix8.8'", "'enum'", "'bool'", "'raw'", "'range'", 
                     "'pos'", "'mode'", "'t'", "'c'", "'reset'", "'type'", 
                     "'flag'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Fix_range", "Nat_range", 
                      "Int_range", "HEX", "Fixpoint", "Positive", "Natural", 
                      "Integer", "LABEL", "EXT_LABEL", "STRING", "WS" ]

    RULE_sxl_file = 0
    RULE_import_statement = 1
    RULE_blocks = 2
    RULE_block = 3
    RULE_block_item = 4
    RULE_registers = 5
    RULE_register = 6
    RULE_register_item = 7
    RULE_signals = 8
    RULE_signal = 9
    RULE_signal_item = 10
    RULE_enumeration = 11
    RULE_enum_item = 12
    RULE_description = 13
    RULE_address = 14
    RULE_size = 15
    RULE_value = 16
    RULE_notify = 17
    RULE_unit = 18
    RULE_unit_value = 19
    RULE_numrep = 20
    RULE_numrep_value = 21
    RULE_range_item = 22
    RULE_range_value = 23
    RULE_position = 24
    RULE_position_value = 25
    RULE_sigmode = 26
    RULE_resetval = 27
    RULE_resetval_value = 28
    RULE_type_item = 29
    RULE_type_val = 30

    ruleNames =  [ "sxl_file", "import_statement", "blocks", "block", "block_item", 
                   "registers", "register", "register_item", "signals", 
                   "signal", "signal_item", "enumeration", "enum_item", 
                   "description", "address", "size", "value", "notify", 
                   "unit", "unit_value", "numrep", "numrep_value", "range_item", 
                   "range_value", "position", "position_value", "sigmode", 
                   "resetval", "resetval_value", "type_item", "type_val" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    Fix_range=38
    Nat_range=39
    Int_range=40
    HEX=41
    Fixpoint=42
    Positive=43
    Natural=44
    Integer=45
    LABEL=46
    EXT_LABEL=47
    STRING=48
    WS=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Sxl_fileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blocks(self):
            return self.getTypedRuleContext(sxlParser.BlocksContext,0)


        def EOF(self):
            return self.getToken(sxlParser.EOF, 0)

        def import_statement(self):
            return self.getTypedRuleContext(sxlParser.Import_statementContext,0)


        def getRuleIndex(self):
            return sxlParser.RULE_sxl_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSxl_file" ):
                listener.enterSxl_file(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSxl_file" ):
                listener.exitSxl_file(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSxl_file" ):
                return visitor.visitSxl_file(self)
            else:
                return visitor.visitChildren(self)




    def sxl_file(self):

        localctx = sxlParser.Sxl_fileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sxl_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==sxlParser.T__0:
                self.state = 62
                self.import_statement()


            self.state = 65
            self.blocks()
            self.state = 66
            self.match(sxlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Import_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXT_LABEL(self, i:int=None):
            if i is None:
                return self.getTokens(sxlParser.EXT_LABEL)
            else:
                return self.getToken(sxlParser.EXT_LABEL, i)

        def getRuleIndex(self):
            return sxlParser.RULE_import_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImport_statement" ):
                listener.enterImport_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImport_statement" ):
                listener.exitImport_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_statement" ):
                return visitor.visitImport_statement(self)
            else:
                return visitor.visitChildren(self)




    def import_statement(self):

        localctx = sxlParser.Import_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_import_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(sxlParser.T__0)
            self.state = 69
            self.match(sxlParser.T__1)
            self.state = 71 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 70
                self.match(sxlParser.EXT_LABEL)
                self.state = 73 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==sxlParser.EXT_LABEL):
                    break

            self.state = 75
            self.match(sxlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlocksContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sxlParser.BlockContext)
            else:
                return self.getTypedRuleContext(sxlParser.BlockContext,i)


        def getRuleIndex(self):
            return sxlParser.RULE_blocks

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlocks" ):
                listener.enterBlocks(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlocks" ):
                listener.exitBlocks(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlocks" ):
                return visitor.visitBlocks(self)
            else:
                return visitor.visitChildren(self)




    def blocks(self):

        localctx = sxlParser.BlocksContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_blocks)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(sxlParser.T__3)
            self.state = 78
            self.match(sxlParser.T__1)
            self.state = 80 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 79
                self.block()
                self.state = 82 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==sxlParser.LABEL):
                    break

            self.state = 84
            self.match(sxlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LABEL(self):
            return self.getToken(sxlParser.LABEL, 0)

        def block_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sxlParser.Block_itemContext)
            else:
                return self.getTypedRuleContext(sxlParser.Block_itemContext,i)


        def getRuleIndex(self):
            return sxlParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = sxlParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(sxlParser.LABEL)
            self.state = 87
            self.match(sxlParser.T__1)
            self.state = 89 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 88
                self.block_item()
                self.state = 91 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << sxlParser.T__4) | (1 << sxlParser.T__7) | (1 << sxlParser.T__8) | (1 << sxlParser.T__9))) != 0)):
                    break

            self.state = 93
            self.match(sxlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Block_itemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def description(self):
            return self.getTypedRuleContext(sxlParser.DescriptionContext,0)


        def address(self):
            return self.getTypedRuleContext(sxlParser.AddressContext,0)


        def size(self):
            return self.getTypedRuleContext(sxlParser.SizeContext,0)


        def registers(self):
            return self.getTypedRuleContext(sxlParser.RegistersContext,0)


        def getRuleIndex(self):
            return sxlParser.RULE_block_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_item" ):
                listener.enterBlock_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_item" ):
                listener.exitBlock_item(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock_item" ):
                return visitor.visitBlock_item(self)
            else:
                return visitor.visitChildren(self)




    def block_item(self):

        localctx = sxlParser.Block_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_block_item)
        try:
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [sxlParser.T__7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.description()
                pass
            elif token in [sxlParser.T__8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.address()
                pass
            elif token in [sxlParser.T__9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.size()
                pass
            elif token in [sxlParser.T__4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 98
                self.registers()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RegistersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def register(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sxlParser.RegisterContext)
            else:
                return self.getTypedRuleContext(sxlParser.RegisterContext,i)


        def getRuleIndex(self):
            return sxlParser.RULE_registers

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegisters" ):
                listener.enterRegisters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegisters" ):
                listener.exitRegisters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegisters" ):
                return visitor.visitRegisters(self)
            else:
                return visitor.visitChildren(self)




    def registers(self):

        localctx = sxlParser.RegistersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_registers)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(sxlParser.T__4)
            self.state = 102
            self.match(sxlParser.T__1)
            self.state = 104 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 103
                self.register()
                self.state = 106 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==sxlParser.LABEL):
                    break

            self.state = 108
            self.match(sxlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RegisterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LABEL(self):
            return self.getToken(sxlParser.LABEL, 0)

        def register_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sxlParser.Register_itemContext)
            else:
                return self.getTypedRuleContext(sxlParser.Register_itemContext,i)


        def getRuleIndex(self):
            return sxlParser.RULE_register

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegister" ):
                listener.enterRegister(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegister" ):
                listener.exitRegister(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegister" ):
                return visitor.visitRegister(self)
            else:
                return visitor.visitChildren(self)




    def register(self):

        localctx = sxlParser.RegisterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_register)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(sxlParser.LABEL)
            self.state = 111
            self.match(sxlParser.T__1)
            self.state = 113 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 112
                self.register_item()
                self.state = 115 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << sxlParser.T__5) | (1 << sxlParser.T__7) | (1 << sxlParser.T__8) | (1 << sxlParser.T__11))) != 0)):
                    break

            self.state = 117
            self.match(sxlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Register_itemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return sxlParser.RULE_register_item

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class RegNotifyContext(Register_itemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a sxlParser.Register_itemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def notify(self):
            return self.getTypedRuleContext(sxlParser.NotifyContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegNotify" ):
                listener.enterRegNotify(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegNotify" ):
                listener.exitRegNotify(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegNotify" ):
                return visitor.visitRegNotify(self)
            else:
                return visitor.visitChildren(self)


    class RegDescriptionContext(Register_itemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a sxlParser.Register_itemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def description(self):
            return self.getTypedRuleContext(sxlParser.DescriptionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegDescription" ):
                listener.enterRegDescription(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegDescription" ):
                listener.exitRegDescription(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegDescription" ):
                return visitor.visitRegDescription(self)
            else:
                return visitor.visitChildren(self)


    class RegSignalsContext(Register_itemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a sxlParser.Register_itemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def signals(self):
            return self.getTypedRuleContext(sxlParser.SignalsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegSignals" ):
                listener.enterRegSignals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegSignals" ):
                listener.exitRegSignals(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegSignals" ):
                return visitor.visitRegSignals(self)
            else:
                return visitor.visitChildren(self)


    class RegAddrContext(Register_itemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a sxlParser.Register_itemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def address(self):
            return self.getTypedRuleContext(sxlParser.AddressContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegAddr" ):
                listener.enterRegAddr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegAddr" ):
                listener.exitRegAddr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegAddr" ):
                return visitor.visitRegAddr(self)
            else:
                return visitor.visitChildren(self)



    def register_item(self):

        localctx = sxlParser.Register_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_register_item)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [sxlParser.T__7]:
                localctx = sxlParser.RegDescriptionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.description()
                pass
            elif token in [sxlParser.T__8]:
                localctx = sxlParser.RegAddrContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.address()
                pass
            elif token in [sxlParser.T__5]:
                localctx = sxlParser.RegSignalsContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 121
                self.signals()
                pass
            elif token in [sxlParser.T__11]:
                localctx = sxlParser.RegNotifyContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 122
                self.notify()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SignalsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def signal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sxlParser.SignalContext)
            else:
                return self.getTypedRuleContext(sxlParser.SignalContext,i)


        def getRuleIndex(self):
            return sxlParser.RULE_signals

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignals" ):
                listener.enterSignals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignals" ):
                listener.exitSignals(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSignals" ):
                return visitor.visitSignals(self)
            else:
                return visitor.visitChildren(self)




    def signals(self):

        localctx = sxlParser.SignalsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_signals)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(sxlParser.T__5)
            self.state = 126
            self.match(sxlParser.T__1)
            self.state = 128 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 127
                self.signal()
                self.state = 130 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==sxlParser.LABEL):
                    break

            self.state = 132
            self.match(sxlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SignalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LABEL(self):
            return self.getToken(sxlParser.LABEL, 0)

        def signal_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sxlParser.Signal_itemContext)
            else:
                return self.getTypedRuleContext(sxlParser.Signal_itemContext,i)


        def getRuleIndex(self):
            return sxlParser.RULE_signal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignal" ):
                listener.enterSignal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignal" ):
                listener.exitSignal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSignal" ):
                return visitor.visitSignal(self)
            else:
                return visitor.visitChildren(self)




    def signal(self):

        localctx = sxlParser.SignalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_signal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(sxlParser.LABEL)
            self.state = 135
            self.match(sxlParser.T__1)
            self.state = 137 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 136
                self.signal_item()
                self.state = 139 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << sxlParser.T__6) | (1 << sxlParser.T__7) | (1 << sxlParser.T__15) | (1 << sxlParser.T__18) | (1 << sxlParser.T__29) | (1 << sxlParser.T__30) | (1 << sxlParser.T__31) | (1 << sxlParser.T__34) | (1 << sxlParser.T__35))) != 0)):
                    break

            self.state = 141
            self.match(sxlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Signal_itemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return sxlParser.RULE_signal_item

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SigResetContext(Signal_itemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a sxlParser.Signal_itemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def resetval(self):
            return self.getTypedRuleContext(sxlParser.ResetvalContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSigReset" ):
                listener.enterSigReset(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSigReset" ):
                listener.exitSigReset(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSigReset" ):
                return visitor.visitSigReset(self)
            else:
                return visitor.visitChildren(self)


    class SigPositionContext(Signal_itemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a sxlParser.Signal_itemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def position(self):
            return self.getTypedRuleContext(sxlParser.PositionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSigPosition" ):
                listener.enterSigPosition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSigPosition" ):
                listener.exitSigPosition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSigPosition" ):
                return visitor.visitSigPosition(self)
            else:
                return visitor.visitChildren(self)


    class DontcareContext(Signal_itemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a sxlParser.Signal_itemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def unit(self):
            return self.getTypedRuleContext(sxlParser.UnitContext,0)

        def numrep(self):
            return self.getTypedRuleContext(sxlParser.NumrepContext,0)

        def range_item(self):
            return self.getTypedRuleContext(sxlParser.Range_itemContext,0)

        def type_item(self):
            return self.getTypedRuleContext(sxlParser.Type_itemContext,0)

        def enumeration(self):
            return self.getTypedRuleContext(sxlParser.EnumerationContext,0)

        def description(self):
            return self.getTypedRuleContext(sxlParser.DescriptionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDontcare" ):
                listener.enterDontcare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDontcare" ):
                listener.exitDontcare(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDontcare" ):
                return visitor.visitDontcare(self)
            else:
                return visitor.visitChildren(self)


    class SigModeContext(Signal_itemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a sxlParser.Signal_itemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def sigmode(self):
            return self.getTypedRuleContext(sxlParser.SigmodeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSigMode" ):
                listener.enterSigMode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSigMode" ):
                listener.exitSigMode(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSigMode" ):
                return visitor.visitSigMode(self)
            else:
                return visitor.visitChildren(self)



    def signal_item(self):
